kubernetes/argocd/argocd-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-server
  namespace: argocd
  labels:
    app.kubernetes.io/name: argocd-server
    app.kubernetes.io/part-of: argocd
    app.kubernetes.io/component: server
  annotations:
    traefik.ingress.kubernetes.io/service.serverstransport: argocd-argocd-webhook@kubernetescrd
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
    - name: https
      protocol: TCP
      port: 443
      targetPort: 8080
  selector:
    app.kubernetes.io/name: argocd-server
